@@ -1,3 +1,7 @@
+Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
+	* bw.c, rc.c, termcap.c, ufile.c, usearch.c:
+	kill some warnings when compiled with -Wall
+
 Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
 	* cmd.c:
 	unwrap array elements in initialization of cmds[]
